@@ -11,6 +11,8 @@ In Progress
   source code. This improves Armitage's responsiveness and takes away
   many opportunities for deadlock.
 - Sync Files for Loot and Downloads is now much better with large files
+- REJOICE! After more than three years of a team server capability, 
+  Armitage now tells you when you are disconnected from a server. 
   
 27 Feb 14 (tested against msf git revision: 72da8299a5)
 ---------
